bk_ida/gccida/c0/gen_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_type/src/c-aux-info.c:841:14: error: use of undeclared identifier 'arg0'
data_type = &arg0; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_type/src/c-aux-info.c:845:65: error: subscript of pointer to incomplete type 'struct rtx_def'
data_type = concat( data_type, *( _QWORD *)&chain_p->int_cst.rtl[2], 0LL); 
                                            ~~~~~~~~~~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_type/src/config.h:7:8: note: forward declaration of 'struct rtx_def'
struct rtx_def;
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_type/src/c-aux-info.c:896:14: error: use of undeclared identifier 'arg0'
data_type = &arg0; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_type/src/c-aux-info.c:917:14: error: use of undeclared identifier 'arg0'
data_type = &arg0; 
             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_type/src/obj/c-aux-info.o] Error 1
